EasyAR SDK v0.2, 加入搜索识别目标方法,更新说明文档

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "mypuppet/easy-ar-sdk",
-    "description": "EasyAR SDK",
+    "description": "EasyAR SDK easyar.cn",
     "keywords": [
         "EasyAR",
         "EasyAR SDK",
